# ginfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: 3rdparty.cmake  cuda.cmake
ginfer/: CMakeLists.txt  model_loader.cpp  model_loader.h
ginfer/alloc/: alloctor.h  cpu.cpp  cuda.cpp
ginfer/common/: base.h  check.h  context.h  device.cc  device.h  errors.h  type.h
ginfer/core/: CMakeLists.txt  context.h
ginfer/core/layer/: embedding.cc  layer.cc  layer.h  linear.cc  rmsnorm.cc
ginfer/core/layer/transformer/: attention.cc  encoder.cc  feedforward.cc  layer.h  lmhead.cc
ginfer/core/memory/: alloc_stats.h  alloc_strategy.h  allocator.cc  allocator.h  allocator_factory.h  buffer.cc  buffer.h  cpu_allocator.cc  cuda_allocator.cc  pinned_cpu_allocator.cc
ginfer/core/model/: llama3.cc  llama3.h  model.cc  model.h  model_factory.h  qwen2.cc  qwen2.h
ginfer/core/model/loader/: model_loader.cc  model_loader.h  safetensor_loader.cc  safetensor_loader.h
ginfer/core/model/tokenizer/: auto_tokenizer.cc  auto_tokenizer.h
ginfer/core/op/: CMakeLists.txt  add_op.cc  argmax_op.cc  embedding_op.cc  gqa_op.cc  matmul_op.cc  op.cc  op.h  page_attn_ops.cc  rmsnorm_op.cc  rope_op.cc  select_last_token_op.cc  swiglu_op.cc
ginfer/core/op/kernels/: add_kernel.h  argmax_kernel.h  embedding_kernel.h  gemm_kernel.h  gemv_kernel.h  gqa_kernel.h  kernel.cc  kernel.h  kernel_dispatcher.h  kernel_registry.h  kernels.h  page_attn_kernel.h  rmsnorm_kernel.h  rope_kernel.h  swiglu_kernel.h  vectorize.h
ginfer/core/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  embedding_kernel.cu  gemv_kernel.cu  gqa_kernel.cu  intrinsic.cuh  rmsnorm_kernel.cu  rope_kernel.cu  select_last_token_kernel.cu  swiglu_kernel.cu  vectorize.cuh
ginfer/core/op/kernels/cuda/gemm_kernel/: gemm_kernel.cu  hgemm_NN.cuh  hgemm_NT.cuh
ginfer/core/op/kernels/cuda/page_attn_kernel/: flash_gqa_varlen_decode_kvcache.cu  flash_gqa_varlen_kernel.cu  store_kvcache_kernel.cu
ginfer/core/tensor/: CMakeLists.txt  dtype.h  layout.h  shape.h  tensor.cc  tensor.h  tensor_writer.h  traits.h
ginfer/engine/: CMakeLists.txt  block_manager.cc  block_manager.h  config.h  engine.cc  engine.h  model_runner.cc  model_runner.h  sampling_params.h  scheduler.cc  scheduler.h  sequence.h
ginfer/layer/: CMakeLists.txt  embedding.cc  layer.cc  layer.h  linear.cc  rmsnorm.cc
ginfer/layer/transformer/: attention.cc  encoder.cc  feedforward.cc  layer.h
ginfer/memory/: CMakeLists.txt  alloc_strategy.h  allocator.cc  allocator.h  allocator_factory.cc  allocator_factory.h  alloctor.h  base.h  buffer.cc  buffer.cpp  buffer.h  cpu.cc  cpu.cpp  cpu_allocator.cc  cuda.cc  cuda.cpp  cuda_allocator.cc  device.h
ginfer/memory/cuda/: alloc_strategy.h  cuda_allocator.h  default_alloc_strategy.cc  pooled_alloc_strategy.cc
ginfer/model/: CMakeLists.txt  llama3.cc  llama3.h  model.cc  model.h  model_factory.h  qwen2.cc  qwen2.h  qwen2_loader.cc  safetensor_loader.cc
ginfer/model/loader/: model_loader.cc  model_loader.h  safetensor_loader.cc  safetensor_loader.h
ginfer/model/tokenizer/: auto_tokenizer.cc  auto_tokenizer.h
ginfer/op/: CMakeLists.txt  add.cc  add_layer.cc  add_op.cc  argmax_layer.cc  argmax_op.cc  embedding_layer.cc  embedding_op.cc  gqa_layer.cc  gqa_op.cc  layer.cc  layer.h  matmul.cc  matmul_layer.cc  matmul_op.cc  op.cc  op.h  rmsnorm_layer.cc  rmsnorm_op.cc  rope_layer.cc  rope_op.cc  swiglu_layer.cc  swiglu_op.cc
ginfer/op/kernels/: add_kernel.h  argmax_kernel.h  embedding_kernel.h  gemm_kernel.h  gemv_kernel.h  gqa_kernel.h  kernel.cc  kernel.h  kernel_registry.h  rmsnorm_kernel.h  rope_kernel.h  swiglu_kernel.h  vectorize.h
ginfer/op/kernels/cuda/: add_kernel.cu  argmax_kernel.cu  embedding_kernel.cu  flash_gqa_varlen_kernel.cu  gemv_kernel.cu  gqa_kernel.cu  intrinsic.cuh  prim.cuh  rmsnorm_kernel.cu  rope_kernel.cu  swiglu_kernel.cu  vectorize.cuh
ginfer/op/kernels/cuda/gemm_kernel/: gemm_kernel.cu  hgemm.cuh  hgemm_NN.cuh  hgemm_NT.cuh
ginfer/tensor/: dtype.h  layout.h  shape.h  tensor.cc  tensor.cpp  tensor.h  traits.h
ginfer/test/: CMakeLists.txt  test_3rd_party.cc  test_engine.cc  test_main.cc  test_memory.cc  test_op.cc  test_tensor.cc
ginfer/test/layer/: test_add_layer.cc  test_argmax_layer.cc  test_embedding_layer.cc  test_gqa_layer.cc  test_matmul_layer.cc  test_rmsnorm_layer.cc  test_rope_layer.cc  test_swiglu_layer.cc
ginfer/test/model/: test_model.cc  test_qwen2.cc
ginfer/test/op/: test_add_op.cc  test_argmax_op.cc  test_embedding_op.cc  test_gqa_op.cc  test_gqa_varlen_op.cc  test_matmul_op.cc  test_page_attn_ops.cc  test_rmsnorm_op.cc  test_rope_op.cc  test_swiglu_op.cc
ginfer/test/pybind/: auto_binding.h  func_wrap.h  pybind.cc  pybind.h  tensor_converter.h  test_add_layer.cc  test_layer.cc  test_op.cc  test_registry.h  test_rmsnorm_layer.cc  type.h
ginfer/tests/: CMakeLists.txt  test_3rd_party.cpp  test_main.cpp  test_memory.cpp  test_op.cc  test_tensor.cc  test_tensor.cpp
ginfer/utils/: file.cc  macros.h  utils.h  variant.h
python/: CMakeLists.txt
python/test/: test_layer.py  test_model.py  test_op.py  test_page_attn.py
