function(add_pathlib_from_path name path)
    file(GLOB SRC_LIST "${path}/*.cc")
    if(NOT SRC_LIST)
        message(FATAL_ERROR "No source files found in ${path}")
    endif()
    add_library(${name} ${SRC_LIST})
    target_include_directories(${name} PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
    message(STATUS "Added library ${name}")
endfunction()

function(add_pathlib_with_deps name path)
    add_pathlib_from_path(${name} ${path})
    target_link_libraries(${name} PUBLIC ${ARGN})
endfunction()

function(add_lib_with_deps name files)
    add_library(${name} ${files})
    target_include_directories(${name} PUBLIC ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
    target_link_libraries(${name} PUBLIC ${ARGN})
    message(STATUS "Added library ${name}")
endfunction()


add_pathlib_with_deps(common ./common fmt::fmt nlohmann_json::nlohmann_json glog::glog CUDA::cudart concurrentqueue)
add_subdirectory(memory)
add_pathlib_with_deps(tensor ./tensor memory)

add_subdirectory(op)
add_subdirectory(layer)
add_subdirectory(model)
add_subdirectory(test)